instance1/temp-retrieve/objects/Affiliate_Doctor_Assistant__c/Affiliate_Doctor_Assistant__c.object-meta.xml
<CustomObject>
    <label>Affiliate Doctor Assistant</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Assistant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliate Doctor Assistants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>