instance1/temp-retrieve/objects/Affiliate_Doctor_Assistant__c/fields/About_Assistant__c.field-meta.xml
<CustomField>
    <fullName>About_Assistant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>About Assistant</label>
    <type>TextArea</type>
</CustomField>