instance1/temp-retrieve/objects/Affiliate_Doctor_Assistant__c/fields/Assistant_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assistant Mobile</label>
    <type>Phone</type>
</CustomField>