instance1/temp-retrieve/objects/Affiliate_Doctor_Assistant__c/fields/Assistant_Status__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Status__c</fullName>
    <label>Assistant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>