instance1/temp-retrieve/objects/Affiliate_Doctor_Assistant__c/fields/Assistant_Title__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assistant Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>